--- a/views/index/index.html
+++ b/views/index/index.html
@@ -1,18 +1,17 @@
 {% extends "base.html" %}
 
 
-{% block title %}
-<title>Mon blog</title>
-{% endblock %}
 
 
 {% block body %}
-    <center>
-        <h1>Contenu de la page d'accueil</h1>
-    </center>
 
-    <p style="text-align: center;">
-        <a href="/posts/">Lien vers la page des posts</a>        
-    </p>
+    lkdsd,lsd,sld,slkd,slkdsds
+    <br />
+    <br />
+    <br />
+    <br />
+
+    Ajdsidjksldksdlks
+
 
 {% endblock %}
