--- a/views/base.html
+++ b/views/base.html
@@ -7,7 +7,9 @@
         <meta name="author" content="">
         <link rel="icon" href="/docs/4.1/assets/img/favicons/favicon.ico">
 
-        <title>Carousel Template for Bootstrap</title>
+        <title>
+            {% block title %}Accueil{% endblock %}
+        </title>
 
         <!-- Bootstrap core CSS -->
         <!--<link href="public/assets/bootstrap/bootstrap.min.css" rel="stylesheet"> -->
@@ -32,7 +34,7 @@
                         <a class="nav-link" href="#">Accueil</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/posts/">Listing des posts</a>
+                        <a class="nav-link" href="/posts/">Listing</a>
                     </li>
                 </ul>
             </div>
@@ -50,14 +52,13 @@
             {% block body %}
 
             {% endblock %}
-
         </div><!-- /.container -->
 
 
         <!-- FOOTER -->
         <footer class="container">
             <p class="float-right"><a href="#">Back to top</a></p>
-            <p>&copy; 2017-2018 Company, Inc. &middot; <a href="#">Privacy</a> &middot; <a href="#">Terms</a></p>
+            <p>&copy; 2022 Inc. &middot; <a href="/mentions-legales/">Mentions légales</a> &middot; <a href="/cookies/">Cookies</a></p>
         </footer>
     </main>
 
